Fix file paths for wine quality datasets

--- a/Final/CS133_F25_Final.ipynb
+++ b/Final/CS133_F25_Final.ipynb
@@ -63,8 +63,8 @@
         "import pandas as pd\n",
         "\n",
         "# Data filepaths\n",
-        "whitewine_fp = 'https://raw.githubusercontent.com/CS133-DataVisualization/F25-classfiles/refs/heads/main/Final/winequality-red.csv'\n",
-        "redwine_fp = 'https://raw.githubusercontent.com/CS133-DataVisualization/F25-classfiles/refs/heads/main/Final/winequality-white.csv'"
+        "redwine_fp = 'https://raw.githubusercontent.com/CS133-DataVisualization/F25-classfiles/refs/heads/main/Final/winequality-red.csv'\n",
+        "whitewine_fp = 'https://raw.githubusercontent.com/CS133-DataVisualization/F25-classfiles/refs/heads/main/Final/winequality-white.csv'"
       ]
     },
     {
